- Add isobaric correction defaults for tmt6plex and 11plex (#7601) 
- Decoy phosho added to unimod.xml (#7612)
- Add additional convenience functions for MSExperiment (#7630)
- Improve file list comparison (#7645)
- pyOpenMS: Add more convenient constructor for AASequence (#7650)
- Add annotate_features param in Deisotoper.cpp (#7643)

Fixes:
- OpenMS does not compile when using GLPK (instead of COINOR) (#7626)
- pyOpenMS
  - get_feature_df() in MRMTransitionGroupCP, output is now as expected (#7646)
- Fix scan number extraction for merged spectra (#7599)
- Cmake fix (#7625) 
  - use Boost config instead of find module (new policy of CMake)
  - escape quotes in whitespace strings
  - remove invalid PRE_BUILD option (in combination with OUTPUT)
  - update diff regex and actual results (which seem to have changed with recent Sage versions...)
- MzTab: preallocate enough memory instead of allocating in the loops (#7624)
  - add check that otherwise will result in out of memory error
  - reduce memory fragmentation on huge files
- KNIME Plugin: Fix categories (#7622)


------------------------------------------------------------------------------------------
----                                OpenMS 3.2.0       (released 09/2024)             ----
------------------------------------------------------------------------------------------

What's new:
- Changes breaking backwards compatibility: 
   - Rename of parameters for TOPP tool FeatureFinderCentroided (debug -> advanced), and PeakPickerWavelet/TOFCalibration (optimization -> optimization:type) (#7154)
   - Rename of parameters for TOPP tool IDFilter (score:pep -> score:psm; score:prot -> score:protein; score:protgroup -> score:proteingroup) with 'nan' as new default (#7541)
   - 3.2.0 KNIME package requires KNIME 5.3 or later
- Support for SubsetNeighborSearch (SNS) via DecoyDatabase (#7565)