@@ -20,18 +20,7 @@ using namespace std;
 namespace OpenMS
 {
 
-  Residue::Residue() :
-    name_("unknown"),
-    average_weight_(0.0f),
-    mono_weight_(0.0f),
-    modification_(nullptr),
-    loss_average_weight_(0.0f),
-    loss_mono_weight_(0.0f),
-    pka_(0.0),
-    pkb_(0.0),
-    pkc_(-1.0)
-  {
-  }
+  Residue::Residue() = default;
 
   Residue::Residue(const String& name,
             const String& three_letter_code,
@@ -44,7 +33,6 @@ namespace OpenMS
             double gb_bb_l,
             double gb_bb_r,
             const set<String>& synonyms):
-                
     name_(name),
     synonyms_(synonyms),
     three_letter_code_(three_letter_code),
@@ -52,9 +40,6 @@ namespace OpenMS
     formula_(formula),
     average_weight_(formula.getAverageWeight()),
     mono_weight_(formula.getMonoWeight()),
-    modification_(nullptr),
-    loss_average_weight_(0.0f),
-    loss_mono_weight_(0.0f),
     pka_(pka),
     pkb_(pkb),
     pkc_(pkc),
@@ -82,69 +67,7 @@ namespace OpenMS
 
   String Residue::getResidueTypeName(const Residue::ResidueType res_type)
   {
-    switch (res_type)
-    {
-    case Residue::Full:
-      return "full";
-
-    case Residue::Internal:
-      return "internal";
-
-    case Residue::NTerminal:
-      return "N-terminal";
-
-    case Residue::CTerminal:
-      return "C-terminal";
-
-    case Residue::AIon:
-      return "a-ion";
-
-    case Residue::BIon:
-      return "b-ion";
-
-    case Residue::CIon:
-      return "c-ion";
-
-    case Residue::XIon:
-      return "x-ion";
-
-    case Residue::YIon:
-      return "y-ion";
-
-    case Residue::ZIon:
-      return "z-ion";
-
-    case Residue::Precursor:
-      return "precursor-ion";
-
-    case Residue::BIonMinusH20:
-      return "b-H2O-ion";
-
-    case Residue::YIonMinusH20:
-      return "y-H2O-ion";
-
-    case Residue::BIonMinusNH3:
-      return "B-NH3-ion";
-
-    case Residue::YIonMinusNH3:
-      return "y-NH3-ion";
-
-    case Residue::Zp1Ion:
-      return "z+1-ion";
-      
-    case Residue::Zp2Ion:
-      return "z+2-ion";      
-
-    case Residue::NonIdentified:
-      return "Non-identified ion";
-
-    case Residue::Unannotated:
-      return "unannotated";
-
-    default:
-      cerr << "Error: Residue::getResidueTypeName - residue type has no name. The developer should add a residue name to Residue.cpp" << endl;
-    }
-    return "";
+    return names_of_residuetype[res_type];
   }
 
   void Residue::setSynonyms(const set<String>& synonyms)
@@ -699,10 +622,10 @@ namespace OpenMS
 
   ostream& operator<<(ostream& os, const Residue& residue)
   {
-    os << residue.name_ << " "
-    << residue.three_letter_code_ << " "
-    << residue.one_letter_code_ << " "
-    << residue.formula_;
+    os << residue.name_ << ' '
+       << residue.three_letter_code_ << ' '
+       << residue.one_letter_code_ << ' '
+       << residue.formula_;
     return os;
   }
 
